Polishing.
Simplify code, move methods around.